--- a/SuperEconomicoApp/Views/Delivery/TabbedDeliveryView.xaml
+++ b/SuperEconomicoApp/Views/Delivery/TabbedDeliveryView.xaml
@@ -4,13 +4,13 @@
             xmlns:local="clr-namespace:SuperEconomicoApp.Views.Delivery"
             x:Class="SuperEconomicoApp.Views.Delivery.TabbedDeliveryView"
             Visual="Material"
-            BackgroundColor="Purple">
+            BackgroundColor="#5E0F8D">
     <TabbedPage.Resources>
         <Style TargetType="TabbedPage"                
            ApplyToDerivedTypes="True">
 
             <Setter Property="BarBackgroundColor"
-                Value="Purple"/>
+                Value="#5E0F8D"/>
             <Setter Property="BarTextColor"
                 Value="White"/>
         </Style>
