--- a/SuperEconomicoApp/Views/AccountUserView.xaml
+++ b/SuperEconomicoApp/Views/AccountUserView.xaml
@@ -114,7 +114,7 @@
                     </Grid>
                 </Frame>
                 <Button Text="ACTUALIZAR PERFIL" 
-                    BackgroundColor="#76448A" 
+                    BackgroundColor="#5E0F8D" 
                     TextColor="White" 
                     Margin="70,-35,70,0"
                     x:Name="btnEdit"
@@ -204,7 +204,7 @@
                
 
                 <Button Text="ACTUALIZAR DEPARTAMENTO" 
-                    BackgroundColor="#76448A" 
+                    BackgroundColor="#5E0F8D" 
                     TextColor="White" 
                     Margin="0,-15,0,0"
                     Command="{Binding UpdateDepartmentCommand}"
