--- a/SuperEconomicoApp/Views/ConfirmOrderView.xaml
+++ b/SuperEconomicoApp/Views/ConfirmOrderView.xaml
@@ -4,29 +4,24 @@
              x:Class="SuperEconomicoApp.Views.ConfirmOrderView"
              xmlns:Converter="clr-namespace:SuperEconomicoApp.Converters"
              Visual="Material"
-             x:Name="CurrentPage">
+             x:Name="CurrentPage"
+             BackgroundColor="#EFF0F0">
 
     <ContentPage.Resources>
         <ResourceDictionary>
             <Converter:Base64ToImageSource x:Key="Base64ToImage" />
         </ResourceDictionary>
-        <Style TargetType="Grid">
-            <Setter Property="VisualStateManager.VisualStateGroups">
-                <VisualStateGroupList>
-                    <VisualStateGroup x:Name="CommonStates">
-                        <VisualState x:Name="Normal" />
-                        <VisualState x:Name="Selected">
-                            <VisualState.Setters>
-                                <Setter Property="BackgroundColor"
-                                        Value="LightSkyBlue" />
-                            </VisualState.Setters>
-                        </VisualState>
-                    </VisualStateGroup>
-                </VisualStateGroupList>
-            </Setter>
-        </Style>
         <Style TargetType="BoxView"
                x:Key="SeparadorBoxview">
+            <Setter Property="HeightRequest"
+                    Value="4" />
+            <Setter Property="BackgroundColor"
+                    Value="#5E0F8D" />
+            <Setter Property="Opacity"
+                    Value="0.1" />
+        </Style>
+        <Style TargetType="BoxView"
+               x:Key="SeparadorBoxview2">
             <Setter Property="HeightRequest"
                     Value="2" />
             <Setter Property="BackgroundColor"
@@ -37,113 +32,45 @@
     </ContentPage.Resources>
 
     <ScrollView>
-        <StackLayout Padding="10">
-            <StackLayout Orientation="Horizontal">
-                <Image Source="compras.png" 
-                       HeightRequest="50" 
-                       VerticalOptions="Center"/>
-                <Label Text="El Economico"
-                       FontAttributes="Bold"
+        
+        <StackLayout>
+            <Grid VerticalOptions="Center">
+                <BoxView BackgroundColor="#5E0F8D"
+                 CornerRadius="0,0,18,18"/>
+                <StackLayout >
+                    <Label Text="Resumen de tu orden"
+                       TextColor="White"
                        FontSize="18"
-                       TextColor="Black"
-                       HorizontalOptions="CenterAndExpand"
-                       VerticalOptions="Center"/>
-                <Button Text="CANCELAR ORDEN" 
-                        FontSize="7"
-                        CornerRadius="10"
-                        VerticalOptions="Center"
-                        HorizontalOptions="Center"
-                        Command="{Binding DeleteOrderCommand}"/>
-            </StackLayout>
-            <Grid ColumnDefinitions="auto">
-                <CollectionView ItemsSource="{Binding ListProductsOrdered}"
-                        VerticalOptions="CenterAndExpand"
-                        x:Name="ListProductsOrderedCollection"
-                        HeightRequest="550"
-                        Header="{Binding .}">
-
-                    <CollectionView.HeaderTemplate>
-                        <DataTemplate>
-                            <StackLayout>
-                                <Label Margin="10,0,0,0"
-                               Text="RESUMEN DE TU ORDEN"
-                               FontSize="20"
-                               FontAttributes="Bold" />
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.HeaderTemplate>
-                    <CollectionView.ItemsLayout>
-                        <GridItemsLayout Orientation="Vertical"
-                                 Span="1"
-                                 VerticalItemSpacing="5"/>
-                    </CollectionView.ItemsLayout>
-
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <Frame BackgroundColor="#DEDEDE"
-                           CornerRadius="15">
-                                <StackLayout Orientation="Horizontal">
-                                    <Image Source="{Binding ImageProduct,  Converter={StaticResource Base64ToImage}}"
-                                           HeightRequest="70"
-                                           WidthRequest="70"/>
-                                    <StackLayout VerticalOptions="Center">
-                                        <Label Text="{Binding ProductName}"
-                                               FontSize="16"
-                                               FontAttributes="Bold"/>  
-                                        <Label Text="{Binding Price, StringFormat='L. {0:F0}'}"
-                                               FontSize="16"
-                                               FontAttributes="Bold"/>
-                                    </StackLayout>
-
-                                    <StackLayout VerticalOptions="Center"
-                                                 Orientation="Horizontal"
-                                                 HorizontalOptions="EndAndExpand">
-                                        <Label Text="{Binding Quantity}"
-                                           VerticalOptions="Center"
-                                           FontSize="18"
-                                           FontAttributes="Bold"
-                                           HorizontalOptions="End"/>
-                                        <Image Source="eliminar_producto_carrito.png"
-                                           HeightRequest="40"
-                                           VerticalOptions="Center">
-
-                                            <Image.GestureRecognizers>
-                                                <TapGestureRecognizer Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.DeleteProductCommand}"
-                                                          CommandParameter="{Binding .}"/>
-                                            </Image.GestureRecognizers>
-
-                                        </Image>
-                                    </StackLayout>
-
-                                </StackLayout>
-
-                                <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.IncreaseQuantityCommand}"
-                                                          CommandParameter="{Binding .}"/>
-                                </Frame.GestureRecognizers>
-                                
-                            </Frame>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
+                       FontAttributes="Bold"
+                       HorizontalTextAlignment="Center"
+                       Margin="0,15,0,19"/>
+                </StackLayout>
             </Grid>
+            <StackLayout Padding="10,5,10,10">
+                <Frame BackgroundColor="White"
+                           CornerRadius="3"
+                           HasShadow="False"
+                           Padding="20">
+                    <StackLayout Orientation="Horizontal">
 
-            <BoxView Style="{StaticResource SeparadorBoxview}" />
-            <StackLayout Orientation="Horizontal"
-                     VerticalOptions="StartAndExpand">
-                <Label Text="Total"
-               FontSize="18"
-               FontAttributes="Bold"
-               VerticalOptions="Center"/>
-                <Label Text="{Binding TotalPrincipal, StringFormat='L. {0:F0}'}"
-               FontSize="19"
-               FontAttributes="Bold"
-               VerticalOptions="Center"
-               HorizontalOptions="EndAndExpand"/>
+                        <Label Text="Total:"
+                               FontSize="17"
+                               FontAttributes="Bold"
+                               VerticalOptions="Center"
+                               TextColor="Black"/>
+
+                        <Label Text="{Binding TotalPrincipal, StringFormat='L. {0:F0}'}"
+                               FontSize="17"
+                               FontAttributes="Bold"
+                               HorizontalOptions="EndAndExpand"
+                               VerticalOptions="Center"
+                               TextColor="Black"/>
+
+                    </StackLayout>
+
+                </Frame>
             </StackLayout>
-            <BoxView Style="{StaticResource SeparadorBoxview}" />
-
-            <StackLayout>
+            <StackLayout Padding="10,5,10,10">
                 <Label Text="Selecionado"
                    FontSize="16"
                    Margin="0,0,0,5"
@@ -184,14 +111,17 @@
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Grid BackgroundColor="#DEDEDE" 
+                            <Grid BackgroundColor="White" 
                                   ColumnDefinitions="40,200" 
                                   Padding="10,0">
-                                <StackLayout Grid.Column="0" VerticalOptions="Center">
-                                    <Image Source="casa.png" HeightRequest="30" WidthRequest="30"/>
+                                <StackLayout Grid.Column="0" 
+                                             VerticalOptions="Center">
+                                    <Image Source="ubication_collection.png" 
+                                           HeightRequest="30" 
+                                           WidthRequest="30"/>
                                 </StackLayout>
                                 <StackLayout Grid.Column="1" VerticalOptions="Center">
-                                    <Label Text="Casa" 
+                                    <Label Text="Ubicación" 
                                        FontAttributes="Bold" 
                                        TextColor="Black" 
                                        FontSize="Medium"/>
@@ -210,30 +140,109 @@
                     </CollectionView.ItemTemplate>
 
                 </CollectionView>
-                <StackLayout Orientation="Horizontal">
+                <StackLayout Orientation="Horizontal" 
+                             Margin="0,7,0,7">
                     <Button Text="Agregar dirección"
+                        FontAttributes="Bold"
                         VerticalOptions="Center"
                         HorizontalOptions="Start"
+                        BackgroundColor="#5E0F8D"
+                        TextColor="White"
+                        CornerRadius="15"
                         Command="{Binding AddDirectionCommand}"
-                        FontSize="14"
-                        TextTransform="None"/>
-                    <Button Text="Dirección actual"
-                        VerticalOptions="Center"
-                        HorizontalOptions="Start"
-                        Command="{Binding AddDirectionCurrentCommand}"
-                        FontSize="14"
-                        TextTransform="None"/>
+                        FontSize="14"/>
+
+                    <Image Source="current_ubication.png"
+                           HorizontalOptions="EndAndExpand"
+                           HeightRequest="40">
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding AddDirectionCurrentCommand}"/>
+                        </Image.GestureRecognizers>
+                    </Image>
                 </StackLayout>
-                <BoxView Style="{StaticResource SeparadorBoxview}" />
+                <BoxView Style="{StaticResource SeparadorBoxview2}"/>
+            </StackLayout>
+            <Grid Padding="10,5,10,10">
+                <CollectionView ItemsSource="{Binding ListProductsOrdered}"
+                        VerticalOptions="CenterAndExpand"
+                        x:Name="ListProductsOrderedCollection"
+                        HeightRequest="400">
+
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout Orientation="Vertical"
+                                 Span="1"
+                                 VerticalItemSpacing="5"/>
+                    </CollectionView.ItemsLayout>
+
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Frame BackgroundColor="White"
+                                   CornerRadius="3">
+                                <StackLayout Orientation="Horizontal">
+                                    <Image Source="{Binding ImageProduct,  Converter={StaticResource Base64ToImage}}"
+                                           HeightRequest="70"
+                                           WidthRequest="70"/>
+                                    <StackLayout VerticalOptions="Center">
+                                        <Label Text="{Binding ProductName}"
+                                               FontSize="16"
+                                               FontAttributes="Bold"
+                                               TextColor="Black"/>
+                                        <Label Text="{Binding Price, StringFormat='L. {0:F0}'}"
+                                               FontSize="16"
+                                               FontAttributes="Bold"/>
+                                    </StackLayout>
+
+                                    <StackLayout VerticalOptions="Center"
+                                                 Orientation="Horizontal"
+                                                 HorizontalOptions="EndAndExpand">
+                                        <Frame CornerRadius="50"
+                                               Padding="17,8"
+                                               BackgroundColor="#5E0F8D">
+                                            <Label Text="{Binding Quantity}"
+                                               VerticalOptions="Center"
+                                               FontSize="18"
+                                               FontAttributes="Bold"
+                                               HorizontalOptions="End"
+                                               TextColor="White"/>
+                                        </Frame>
+                                        <Image Source="eliminar_producto_carrito.png"
+                                           HeightRequest="40"
+                                           VerticalOptions="Center">
+
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.DeleteProductCommand}"
+                                                          CommandParameter="{Binding .}"/>
+                                            </Image.GestureRecognizers>
+
+                                        </Image>
+                                    </StackLayout>
+
+                                </StackLayout>
+
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.IncreaseQuantityCommand}"
+                                                          CommandParameter="{Binding .}"/>
+                                </Frame.GestureRecognizers>
+
+                            </Frame>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </Grid>
+
+            <StackLayout Padding="10,5,10,10">
+                <Button Text="PROCESAR ORDEN"
+                        BackgroundColor="#5E0F8D"
+                        TextColor="White"
+                        CornerRadius="12"
+                        Command="{Binding SaveOrderCommand}"/>
+                <Button Text="CANCELAR ORDEN"
+                        BackgroundColor="#5E0F8D"
+                        TextColor="White"
+                        CornerRadius="12"
+                        Command="{Binding DeleteOrderCommand}"/>
             </StackLayout>
 
-            <!--<Editor VerticalOptions="FillAndExpand" 
-                    Placeholder="Alguna instrucción en la orden (opcional)"
-                    Margin="10"
-                    Text="{Binding Comment}"/>-->
-
-            <Button Text="PROCESAR ORDEN"
-                    Command="{Binding SaveOrderCommand}"/>
         </StackLayout>
     </ScrollView>
 
