--- a/SuperEconomicoApp/Views/Delivery/OrdersDetailHistoryByDeliveryView.xaml
+++ b/SuperEconomicoApp/Views/Delivery/OrdersDetailHistoryByDeliveryView.xaml
@@ -41,7 +41,7 @@
                                FontSize="17"
                                FontAttributes="Bold"
                                HorizontalTextAlignment="Center"
-                               TextColor="Purple"/>
+                               TextColor="#5E0F8D"/>
 
                             <StackLayout Orientation="Horizontal"
                                      Margin="10,0,0,8">
@@ -49,7 +49,7 @@
                                     Source="{Binding ImageClient,  Converter={StaticResource ByteToImage}}"
                                     HeightRequest="55"
                                     HorizontalOptions="Center"
-                                    BorderColor="Purple"  
+                                    BorderColor="#5E0F8D"  
                                     BorderThickness="1"/>
 
                                 <StackLayout>
@@ -82,7 +82,7 @@
                                FontSize="17"
                                FontAttributes="Bold"
                                HorizontalTextAlignment="Center"
-                               TextColor="Purple"/>
+                               TextColor="#5E0F8D"/>
 
                             <Grid RowDefinitions ="*,*">
                                 <Grid Grid.Row="0" ColumnDefinitions="100,*" Margin="-3,2,0,0" HorizontalOptions="Center">
@@ -178,7 +178,7 @@
                                                  HorizontalOptions="EndAndExpand">
                                             <Frame CornerRadius="50"
                                                Padding="18,8"
-                                               BackgroundColor="Purple">
+                                               BackgroundColor="#5E0F8D">
                                                 <Label Text="{Binding quantity}"
                                                VerticalOptions="Center"
                                                FontSize="18"
