--- a/SuperEconomicoApp/Views/Delivery/OrdersHistoryDeliveryView.xaml
+++ b/SuperEconomicoApp/Views/Delivery/OrdersHistoryDeliveryView.xaml
@@ -46,7 +46,7 @@
                                     <StackLayout Margin="15,0,0,0">
                                         <Label FontSize="18"
                                                FontAttributes="Bold"
-                                               TextColor="#76448A">
+                                               TextColor="Black">
                                             <Label.Text>
                                                 <MultiBinding StringFormat="{}{0} {1}">
                                                     <Binding Path="ClientName" />
