--- a/SuperEconomicoApp/Views/SendRecoveryPass.xaml
+++ b/SuperEconomicoApp/Views/SendRecoveryPass.xaml
@@ -21,7 +21,7 @@
             FontSize="Default"
             Margin="20,10,20,0"
             />
-            <Button Text="Enviar" CornerRadius="8"  BackgroundColor="#8873b6" TextColor="White" Margin="150,10,20,0" x:Name="btnSendCodigo" Clicked="btnSendCodigo_Clicked"/>
+            <Button Text="Enviar" CornerRadius="8"  BackgroundColor="#5E0F8D" TextColor="White" Margin="150,10,20,0" x:Name="btnSendCodigo" Clicked="btnSendCodigo_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
