--- a/SuperEconomicoApp/Views/Ubication/AddDirectionView.xaml
+++ b/SuperEconomicoApp/Views/Ubication/AddDirectionView.xaml
@@ -13,6 +13,8 @@
                     Margin="0,0,0,5"/>
                 <Button Text="{Binding TextButton}"
                     CornerRadius="10"
+                    BackgroundColor="#5E0F8D"
+                    TextColor="White"
                     Command="{Binding ConfirmUbicationCommand}"
                     IsEnabled="{Binding IsEnabledButton}"/>
             </StackLayout>
